<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity2"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="30sp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailadd"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/xyz_gmail_com"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:id="@+id/sent"
        android:text="@string/send_instruction"/>
    <Button
        android:layout_marginTop="400dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/nextbtn"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        />

</LinearLayout>
</ScrollView>