<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:padding="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        >

        <ImageView

            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center"
            android:src="@drawable/xx"

            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="45sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            />

        <EditText

            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:id="@+id/emailid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yourname_example_com"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            >

            <EditText
                android:id="@+id/passcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/your_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/btnlogin"
            android:textSize="20sp"
            android:onClick="onLogin"
            android:layout_marginTop="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_yet"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textColor="@color/purple_700"
            android:textSize="20sp"

            />
        <Button
            android:layout_marginTop="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/nextbtn"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            />







    </LinearLayout>
</ScrollView>